--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
       <plugin>
         <groupId>com.github.spotbugs</groupId>
         <artifactId>spotbugs-maven-plugin</artifactId>
-        <version>4.2.0</version>
+        <version>4.7.3.3</version>
         <configuration>
           <effort>Max</effort>
           <threshold>High</threshold><!-- should probably lower this in the future -->
@@ -109,24 +109,8 @@
 
   <repositories>
     <repository>
-      <id>opencollab-release-repo</id>
-      <url>https://repo.opencollab.dev/maven-releases/</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>opencollab-snapshot-repo</id>
-      <url>https://repo.opencollab.dev/maven-snapshots/</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
+      <id>open-collaboration</id>
+      <url>https://repo.opencollab.dev/main/</url>
     </repository>
     <repository>
       <id>Sonatype-public</id>
@@ -137,14 +121,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.nukkitx.fastutil</groupId>
-      <artifactId>fastutil-int-object-maps</artifactId>
-      <version>8.5.3</version>
-    </dependency>
-    <dependency>
       <groupId>org.yaml</groupId>
       <artifactId>snakeyaml</artifactId>
-      <version>1.33</version>
+      <version>2.0</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -156,7 +135,7 @@
     <dependency>
       <groupId>org.checkerframework</groupId>
       <artifactId>checker-qual</artifactId>
-      <version>3.8.0</version>
+      <version>3.32.0</version>
     </dependency>
     <!-- If using JDK 8, add the following additional dependency. -->
     <dependency>
@@ -168,18 +147,18 @@
     <dependency>
       <groupId>com.github.spotbugs</groupId>
       <artifactId>spotbugs-annotations</artifactId>
-      <version>4.2.3</version>
+      <version>4.7.3</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
-      <version>5.8.2</version>
+      <version>5.9.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.8.2</version>
+      <version>5.9.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
